1998-07-17  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* eval.c (scm_copy_tree): Removed ability to copy vectors.
	(Thanks to Doug Evans.)

	* gh_data.c, gh.h (gh_ints2scm, gh_longs2ivect,
	gh_ulongs2uvect): New procedures.  (Complements gh_doubles2scm and
	gh_doubles2dvect.)

	* unif.c: Say that ivect and uvect are of type signed and unsigned
	long instead of int in commentary so that it correctly describes
	the implementation.

1998-07-12  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* stime.c: Removed declaration of strptime.  (It should be
	declared by the system headers.  If it turns out that some systems
	don't, we'll handle that then.)  (Thanks to Greg Troxel.)

	* stime.h: Renamed TIMEH --> STIMEH

	* backtrace.c (scm_display_error, scm_display_backtrace): In order
	to increase portability, don't use structure assignment.
	(Thanks to Nicolas Neuss.)

	* iselect.c: Use LONG_MAX instead of ULONG_MAX for increased
	portability.
	(finalize_fd_sets): Added empty statement after last case label.
	(Thanks to Nicolas Neuss.)

	* gc.c (scm_igc): Changed //-comment into /*-comment.  (Thanks to
	Nicolas Neuss.)

Sat Jul 11 22:08:21 1998  Mikael Djurfeldt  <mdj@totoro.red-bean.com>

	* init.c, readline.c: OK, I won't have these readline.x bug
 	reports anymore.  We've had them since April.  The current reason
	is a completely unintelligible failure of totoro.red-bean.com to
	do the test for rl_getc_function in libreadline correctly.  This
	kludge overrides the test if we're on totoro so that the snapshot
	generation process can work.

	* readline.c: Define a strdup replacement if not existent on system.

1998-07-12  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* vectors.c, vectors.h (scm_make_vector): Removed third argument.
	This change makes scm_make_vector R5RS compatible.  We cannot keep
	the third argument since people want to be able to deduce the form
	of the C function call only by looking at R5RS.  (At the same time